[gd_scene load_steps=178 format=2]

[ext_resource path="res://ASSETS/SFX/getreadyrocha.wav" type="AudioStream" id=1]
[ext_resource path="res://Cenas/Transições/Getready.gd" type="Script" id=2]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-126.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-125.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-129.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-124.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-127.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-128.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-45.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-46.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-20.png" type="Texture" id=11]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-9.png" type="Texture" id=12]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-13.png" type="Texture" id=13]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-21.png" type="Texture" id=14]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-27.png" type="Texture" id=15]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-4.png" type="Texture" id=16]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-5.png" type="Texture" id=17]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-7.png" type="Texture" id=18]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-10.png" type="Texture" id=19]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-15.png" type="Texture" id=20]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-17.png" type="Texture" id=21]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-6.png" type="Texture" id=22]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-18.png" type="Texture" id=23]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-26.png" type="Texture" id=24]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-30.png" type="Texture" id=25]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-8.png" type="Texture" id=26]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-12.png" type="Texture" id=27]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-1.png" type="Texture" id=28]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-19.png" type="Texture" id=29]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-16.png" type="Texture" id=30]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-24.png" type="Texture" id=31]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-11.png" type="Texture" id=32]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-0.png" type="Texture" id=33]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-14.png" type="Texture" id=34]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-22.png" type="Texture" id=35]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-31.png" type="Texture" id=36]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-32.png" type="Texture" id=37]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-36.png" type="Texture" id=38]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-28.png" type="Texture" id=39]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-3.png" type="Texture" id=40]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-33.png" type="Texture" id=41]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-29.png" type="Texture" id=42]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-23.png" type="Texture" id=43]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-35.png" type="Texture" id=44]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-37.png" type="Texture" id=45]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-25.png" type="Texture" id=46]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-38.png" type="Texture" id=47]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-34.png" type="Texture" id=48]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-39.png" type="Texture" id=49]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-40.png" type="Texture" id=50]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-41.png" type="Texture" id=51]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-2.png" type="Texture" id=52]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-42.png" type="Texture" id=53]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-43.png" type="Texture" id=54]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-44.png" type="Texture" id=55]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-107.png" type="Texture" id=56]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-110.png" type="Texture" id=57]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-92.png" type="Texture" id=58]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-48.png" type="Texture" id=59]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-64.png" type="Texture" id=60]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-68.png" type="Texture" id=61]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-60.png" type="Texture" id=62]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-74.png" type="Texture" id=63]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-75.png" type="Texture" id=64]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-81.png" type="Texture" id=65]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-51.png" type="Texture" id=66]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-84.png" type="Texture" id=67]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-85.png" type="Texture" id=68]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-88.png" type="Texture" id=69]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-102.png" type="Texture" id=70]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-104.png" type="Texture" id=71]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-57.png" type="Texture" id=72]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-54.png" type="Texture" id=73]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-61.png" type="Texture" id=74]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-82.png" type="Texture" id=75]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-87.png" type="Texture" id=76]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-80.png" type="Texture" id=77]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-93.png" type="Texture" id=78]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-100.png" type="Texture" id=79]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-105.png" type="Texture" id=80]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-95.png" type="Texture" id=81]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-106.png" type="Texture" id=82]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-59.png" type="Texture" id=83]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-47.png" type="Texture" id=84]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-50.png" type="Texture" id=85]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-56.png" type="Texture" id=86]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-89.png" type="Texture" id=87]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-52.png" type="Texture" id=88]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-72.png" type="Texture" id=89]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-77.png" type="Texture" id=90]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-91.png" type="Texture" id=91]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-108.png" type="Texture" id=92]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-109.png" type="Texture" id=93]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-58.png" type="Texture" id=94]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-66.png" type="Texture" id=95]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-78.png" type="Texture" id=96]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-103.png" type="Texture" id=97]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-76.png" type="Texture" id=98]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-49.png" type="Texture" id=99]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-70.png" type="Texture" id=100]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-98.png" type="Texture" id=101]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-69.png" type="Texture" id=102]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-79.png" type="Texture" id=103]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-96.png" type="Texture" id=104]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-83.png" type="Texture" id=105]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-97.png" type="Texture" id=106]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-63.png" type="Texture" id=107]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-99.png" type="Texture" id=108]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-62.png" type="Texture" id=109]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-67.png" type="Texture" id=110]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-73.png" type="Texture" id=111]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-65.png" type="Texture" id=112]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-94.png" type="Texture" id=113]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-55.png" type="Texture" id=114]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-71.png" type="Texture" id=115]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-53.png" type="Texture" id=116]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-86.png" type="Texture" id=117]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-90.png" type="Texture" id=118]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-101.png" type="Texture" id=119]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-111.png" type="Texture" id=120]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-121.png" type="Texture" id=121]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-123.png" type="Texture" id=122]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-114.png" type="Texture" id=123]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-112.png" type="Texture" id=124]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-113.png" type="Texture" id=125]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-119.png" type="Texture" id=126]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-122.png" type="Texture" id=127]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-117.png" type="Texture" id=128]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-120.png" type="Texture" id=129]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-116.png" type="Texture" id=130]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-115.png" type="Texture" id=131]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-118.png" type="Texture" id=132]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-171.png" type="Texture" id=133]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-153.png" type="Texture" id=134]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-145.png" type="Texture" id=135]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-163.png" type="Texture" id=136]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-151.png" type="Texture" id=137]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-161.png" type="Texture" id=138]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-164.png" type="Texture" id=139]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-140.png" type="Texture" id=140]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-141.png" type="Texture" id=141]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-131.png" type="Texture" id=142]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-133.png" type="Texture" id=143]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-143.png" type="Texture" id=144]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-154.png" type="Texture" id=145]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-156.png" type="Texture" id=146]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-159.png" type="Texture" id=147]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-136.png" type="Texture" id=148]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-144.png" type="Texture" id=149]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-155.png" type="Texture" id=150]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-132.png" type="Texture" id=151]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-167.png" type="Texture" id=152]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-158.png" type="Texture" id=153]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-142.png" type="Texture" id=154]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-165.png" type="Texture" id=155]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-172.png" type="Texture" id=156]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-134.png" type="Texture" id=157]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-137.png" type="Texture" id=158]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-169.png" type="Texture" id=159]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-135.png" type="Texture" id=160]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-150.png" type="Texture" id=161]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-152.png" type="Texture" id=162]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-160.png" type="Texture" id=163]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-130.png" type="Texture" id=164]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-168.png" type="Texture" id=165]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-162.png" type="Texture" id=166]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-138.png" type="Texture" id=167]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-149.png" type="Texture" id=168]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-157.png" type="Texture" id=169]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-147.png" type="Texture" id=170]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-146.png" type="Texture" id=171]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-148.png" type="Texture" id=172]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-139.png" type="Texture" id=173]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-170.png" type="Texture" id=174]
[ext_resource path="res://ASSETS/Cutscenes/VideosIniciofase/rocha/rochinha-166.png" type="Texture" id=175]

[sub_resource type="Animation" id=1]
resource_name = "transiçao"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 28 ), ExtResource( 52 ), ExtResource( 40 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 26 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 32 ), ExtResource( 27 ), ExtResource( 13 ), ExtResource( 34 ), ExtResource( 20 ), ExtResource( 30 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 29 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 35 ), ExtResource( 43 ), ExtResource( 31 ), ExtResource( 46 ), ExtResource( 24 ), ExtResource( 15 ), ExtResource( 39 ), ExtResource( 42 ), ExtResource( 25 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 41 ), ExtResource( 48 ), ExtResource( 44 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 47 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 84 ), ExtResource( 59 ), ExtResource( 99 ), ExtResource( 85 ), ExtResource( 66 ), ExtResource( 88 ), ExtResource( 116 ), ExtResource( 73 ), ExtResource( 114 ), ExtResource( 86 ), ExtResource( 72 ), ExtResource( 94 ), ExtResource( 83 ), ExtResource( 62 ), ExtResource( 74 ), ExtResource( 109 ), ExtResource( 107 ), ExtResource( 60 ), ExtResource( 112 ), ExtResource( 95 ), ExtResource( 110 ), ExtResource( 61 ), ExtResource( 102 ), ExtResource( 100 ), ExtResource( 115 ), ExtResource( 89 ), ExtResource( 111 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 98 ), ExtResource( 90 ), ExtResource( 96 ), ExtResource( 103 ), ExtResource( 77 ), ExtResource( 65 ), ExtResource( 75 ), ExtResource( 105 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 117 ), ExtResource( 76 ), ExtResource( 69 ), ExtResource( 87 ), ExtResource( 118 ), ExtResource( 91 ), ExtResource( 58 ), ExtResource( 78 ), ExtResource( 113 ), ExtResource( 81 ), ExtResource( 104 ), ExtResource( 106 ), ExtResource( 101 ), ExtResource( 108 ), ExtResource( 79 ), ExtResource( 119 ), ExtResource( 70 ), ExtResource( 97 ), ExtResource( 71 ), ExtResource( 80 ), ExtResource( 82 ), ExtResource( 56 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 57 ), ExtResource( 120 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 123 ), ExtResource( 131 ), ExtResource( 130 ), ExtResource( 128 ), ExtResource( 132 ), ExtResource( 126 ), ExtResource( 129 ), ExtResource( 121 ), ExtResource( 127 ), ExtResource( 122 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 164 ), ExtResource( 142 ), ExtResource( 151 ), ExtResource( 143 ), ExtResource( 157 ), ExtResource( 160 ), ExtResource( 148 ), ExtResource( 158 ), ExtResource( 167 ), ExtResource( 173 ), ExtResource( 140 ), ExtResource( 141 ), ExtResource( 154 ), ExtResource( 144 ), ExtResource( 149 ), ExtResource( 135 ), ExtResource( 171 ), ExtResource( 170 ), ExtResource( 172 ), ExtResource( 168 ), ExtResource( 161 ), ExtResource( 137 ), ExtResource( 162 ), ExtResource( 134 ), ExtResource( 145 ), ExtResource( 150 ), ExtResource( 146 ), ExtResource( 169 ), ExtResource( 153 ), ExtResource( 147 ), ExtResource( 163 ), ExtResource( 138 ), ExtResource( 166 ), ExtResource( 136 ), ExtResource( 139 ), ExtResource( 155 ), ExtResource( 175 ), ExtResource( 152 ), ExtResource( 165 ), ExtResource( 159 ), ExtResource( 174 ), ExtResource( 133 ), ExtResource( 156 ) ],
"loop": true,
"name": "rocha",
"speed": 30.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
"anims/transiçao" = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 511.963, 300.09 )
scale = Vector2( 0.533367, 0.556173 )
frames = SubResource( 2 )
animation = "rocha"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimatedSprite"]
stream = ExtResource( 1 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="ready" from="AnimatedSprite" to="." method="_on_AnimatedSprite_ready"]
[connection signal="tree_entered" from="AnimatedSprite" to="." method="_on_AnimatedSprite_tree_entered"]
